debugging changes and adding new features

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,6 +41,7 @@ file.reference.commons-collections4-4.2.jar=Other Files/Jar/commons-collections4
 file.reference.commons-digester-2.1.jar=Other Files/Jar/commons-digester-2.1.jar
 file.reference.commons-logging-1.1.1.jar=Other Files/Jar/commons-logging-1.1.1.jar
 file.reference.ecj-3.21.0.jar=Other Files/Jar/ecj-3.21.0.jar
+file.reference.groovy-4.0.24.jar=C:\\Users\\Baddest\\Documents\\Baddest Programming\\NetBeansProjects\\EasyPaySystem\\Other Files\\Jar\\groovy-4.0.24.jar
 file.reference.jackson-annotations-2.14.1.jar=Other Files/Jar/jackson-annotations-2.14.1.jar
 file.reference.jackson-core-2.14.1.jar=Other Files/Jar/jackson-core-2.14.1.jar
 file.reference.jackson-databind-2.14.1.jar=Other Files/Jar/jackson-databind-2.14.1.jar
@@ -76,7 +77,8 @@ javac.classpath=\
     ${file.reference.rs2xml.jar}:\
     ${file.reference.stax2-api-4.2.1.jar}:\
     ${file.reference.woodstox-core-6.4.0.jar}:\
-    ${file.reference.mysql-connector-java-8.0.28.jar}
+    ${file.reference.mysql-connector-java-8.0.28.jar}:\
+    ${file.reference.groovy-4.0.24.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
